--- a/resources.html
+++ b/resources.html
@@ -139,23 +139,19 @@
             <h2 class="resource-titles">Building Services</h2>
             <div class="resource-req-wrapper">
                 <div class="resource-req">
-                    <h4>Lorem Ipsum Dolor sit Amet</h4>
-                    <p class="body-sm">Consectetur adipiscing elit. Vivamus ut turpis commodo, lobortis erat a, fermentum purus. Donec quam nulla, sodales lacinia consectetur a, elementum ut velit.</p>
+                    <a href="http://www.mooredb.com/" target="_blank"><h4>Moore Architects</h4></a>
+                    <p class="body-sm">Josh Moore is a licensed architect and builder with over twenty years of experience in project management, construction, and architecture/design.</p>
                 </div>
                 <div class="resource-req">
-                    <h4>Vestibulum Interdum Ipsum Et</h4>
-                    <p class="body-sm">Est iaculis egestas. Nullam sit amet tortor magna. Curabitur in lectus eros. Etiam feugiat tellus ut est vulputate, eget mattis sem dignissim. In at sapien lorem.</p>
+                    <a href="http://dolezaltreesurgery.com/" target="_blank"><h4>Dolezal Tree Surgery Inc.</h4></a>
+                    <p class="body-sm">Dolezal Tree Surgery has all types of power equipment and has skilled specialists for every type of tree job.</p>
                 </div>
                 <div class="resource-req">
-                    <h4>Nullam Sed Ornare Metus</h4>
-                    <p class="body-sm">Nunc venenatis a nisl non blandit. Pellentesque non urna urna. Phasellus laoreet pretium enim, eget lacinia est rutrum volutpat. Donec et odio purus. Ut commodo augue ac dapibus eleifend.</p>
-                </div>
-                <div class="resource-req">
-                    <h4>In Sollicitudin Fermentum Faucibus</h4>
-                    <p class="body-sm">Nunc ut gravida elit, id malesuada metus. Suspendisse turpis nisi, feugiat et sollicitudin eu, mattis vitae odio. In eu ipsum ut quam maximus suscipit porttitor ut quam. Cras scelerisque diam vel tristique congue.</p>
+                    <a href="http://www.gopropainters.com/" target="_blank"><h4>Go Pro Painters</h4></a>
+                    <p class="body-sm">Whether you are looking for a residential or a commercial painting service in the Bay Area, Go Pro Painters will assist you with all your interior and exterior painting needs.</p>
                 </div>
             </div>
-            <h2 class="resource-titles">Building Material &amp; Equipment</h2>
+<!--             <h2 class="resource-titles">Building Material &amp; Equipment</h2>
             <div class="resource-req-wrapper">
                 <div class="resource-req">
                     <h4>Ut Pharetra arcu eu Vestibulum Dignissim</h4>
@@ -165,24 +161,31 @@
                     <h4>Mauris Dolor Justo, Dapibus Vitae</h4>
                     <p class="body-sm">Placerat sed, vehicula placerat libero. Quisque condimentum odio ac velit aliquam, eu tincidunt ligula laoreet. Ut vehicula felis eros, nec commodo justo ullamcorper quis.</p>
                 </div>
-            </div>
+            </div> -->
             <h2 class="resource-titles">Organizations &amp; Programs</h2>
             <div class="resource-req-wrapper">
                 <div class="resource-req">
-                    <h4>Aliquam Viverra Justo</h4>
-                    <p class="body-sm">At ex cursus hendrerit. Integer mollis imperdiet vulputate. Aliquam scelerisque massa quis maximus convallis. Cras tempor, quam eu vestibulum posuere, metus urna luctus magna, vitae mattis elit orci a mi.</p>
+                    <a href="https://www.phius.org/home-page" target="_blank"><h4>Passive House</h4></a>
+                    <p class="body-sm">PHIUS+ is the largest Passive Building Certification in North America. It is a well-recognized construction standard and quality assurance system. 98% of all North American certified projects were certified through PHIUS in 2017.</p>
                 </div>
                 <div class="resource-req">
-                    <h4>Duis Ac sem non sem Mattis</h4>
-                    <p class="body-sm">Cursus, phasellus ornare placerat magna vel auctor. Integer in pulvinar libero, rutrum imperdiet lectus.</p>
+                    <a href="http://www.greenbuilding.com/" target="_blank"><h4>Green Building</h4></a>
+                    <p class="body-sm">Whether you are a homeowner looking to remodel your home green or a building professional wanting to learn more about how to build green, this is the place for you.</p>
                 </div>
-                <div class="resource-req">
+<!--                 <div class="resource-req">
                     <h4>Sed Aliquet Muris</h4>
                     <p class="body-sm">El orci convallis luctus. Cras sit amet porttitor sapien. Vestibulum sit amet purus ac risus lacinia fringilla et quis ex.</p>
                 </div>
                 <div class="resource-req">
                     <h4>Sed est est, Dictum eu Finibus</h4>
                     <p class="body-sm">Vitae, gravida ac magna. Integer viverra rutrum imperdiet. Quisque ut massa eget magna tempus porta in at risus. Duis aliquam suscipit aliquet. In rhoncus condimentum tincidunt.</p>
+                </div> -->
+            </div>
+            <h2 class="resource-titles">Other Recommendations</h2>
+            <div class="resource-req-wrapper">
+                <div class="resource-req">
+                    <a href="http://sacredkitchensf.com/" target="_blank"><h4>Sacred Kitchen</h4></a>
+                    <p class="body-sm">Sacred Kitchen combines the warmth and joy of a family supper with the ancient ritual of breaking bread together. Each course is infused with a spicy blend of humor, vulnerability, and powerful facilitation creating a space where all feel welcomed, deeply appreciated, and invited to show up authentically.</p>
                 </div>
             </div>
         </div>
