font-size tweak

--- a/resources.html
+++ b/resources.html
@@ -32,6 +32,14 @@
         margin: 2%;
     }
 
+    .resource-req h4 {
+        font-size: 115%;
+    }
+
+    .resource-req a {
+        text-decoration: underline;
+    }
+
     #resource-blurb {
         padding: 20px;
     }
