more font weights

--- a/resources.html
+++ b/resources.html
@@ -38,6 +38,11 @@
 
     .resource-req a {
         text-decoration: underline;
+        color: black;
+    }
+
+    .resource-req a:hover {
+        font-weight: bolder;
     }
 
     #resource-blurb {
