--- a/resources.html
+++ b/resources.html
@@ -41,8 +41,8 @@
         color: black;
     }
 
-    .resource-req a:hover {
-        font-weight: bolder;
+    .resource-req h4:hover {
+        font-weight: 600;
     }
 
     #resource-blurb {
