new legal policy

--- a/legal.html
+++ b/legal.html
@@ -35,23 +35,63 @@
 
     <div class="container" id="contact-bg">
 
+        <h1>Terms and Conditions ("Terms")</h1>
+
+
+            <p>Last updated: August 06, 2019</p>
+
+
+            <p>Please read these Terms and Conditions ("Terms", "Terms and Conditions") carefully before using the http://www.lilypad.house website (the "Service") operated by LilyPad Dojo ("us", "we", or "our").</p>
+
+            <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
+
+            <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service. The Terms and Conditions agreement  for LilyPad Dojo has been created with the help of <a href="https://www.termsfeed.com/">TermsFeed</a>.</p>
+
+
+            <h2>Links To Other Web Sites</h2>
+
+            <p>Our Service may contain links to third-party web sites or services that are not owned or controlled by LilyPad Dojo.</p>
+
+            <p>LilyPad Dojo has no control over, and assumes no responsibility for, the content, privacy policies, or practices of any third party web sites or services. You further acknowledge and agree that LilyPad Dojo shall not be responsible or liable, directly or indirectly, for any damage or loss caused or alleged to be caused by or in connection with use of or reliance on any such content, goods or services available on or through any such web sites or services.</p>
+
+            <p>We strongly advise you to read the terms and conditions and privacy policies of any third-party web sites or services that you visit.</p>
+
+
+            <h2>Governing Law</h2>
+
+            <p>These Terms shall be governed and construed in accordance with the laws of California, United States, without regard to its conflict of law provisions.</p>
+
+            <p>Our failure to enforce any right or provision of these Terms will not be considered a waiver of those rights. If any provision of these Terms is held to be invalid or unenforceable by a court, the remaining provisions of these Terms will remain in effect. These Terms constitute the entire agreement between us regarding our Service, and supersede and replace any prior agreements we might have between us regarding the Service.</p>
+
+
+            <h2>Changes</h2>
+
+            <p>We reserve the right, at our sole discretion, to modify or replace these Terms at any time. If a revision is material we will try to provide at least 30 days notice prior to any new terms taking effect. What constitutes a material change will be determined at our sole discretion.</p>
+
+            <p>By continuing to access or use our Service after those revisions become effective, you agree to be bound by the revised terms. If you do not agree to the new terms, please stop using the Service.</p>
+
+
+            <h2>Contact Us</h2>
+
+            <p>If you have any questions about these Terms, please contact us.</p>
+
         <h1>Disclaimer</h1>
 
-        <p>Last updated: August 06, 2019</p>
+            <p>Last updated: August 06, 2019</p>
 
-        <p>The information contained on http://www.lilypad.house website (the "Service") is for general information purposes only.</p>
+            <p>The information contained on http://www.lilypad.house website (the "Service") is for general information purposes only.</p>
 
-        <p>LilyPad Dojo assumes no responsibility for errors or omissions in the contents on the Service.</p>
+            <p>LilyPad Dojo assumes no responsibility for errors or omissions in the contents on the Service.</p>
 
-        <p>In no event shall LilyPad Dojo be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. LilyPad Dojo reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice. This Disclaimer  for LilyPad Dojo has been created with the help of <a href="https://www.termsfeed.com/">TermsFeed</a>.</p>
+            <p>In no event shall LilyPad Dojo be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. LilyPad Dojo reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice. This Disclaimer  for LilyPad Dojo has been created with the help of <a href="https://www.termsfeed.com/">TermsFeed</a>.</p>
 
-        <p>LilyPad Dojo does not warrant that the website is free of viruses or other harmful components.</p>
+            <p>LilyPad Dojo does not warrant that the website is free of viruses or other harmful components.</p>
 
-        <h2>External links disclaimer</h2>
+            <h2>External links disclaimer</h2>
 
-        <p>http://www.lilypad.house website may contain links to external websites that are not provided or maintained by or in any way affiliated with LilyPad Dojo</p>
+            <p>http://www.lilypad.house website may contain links to external websites that are not provided or maintained by or in any way affiliated with LilyPad Dojo</p>
 
-        <p>Please note that the LilyPad Dojo does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.</p>
+            <p>Please note that the LilyPad Dojo does not guarantee the accuracy, relevance, timeliness, or completeness of any information on these external websites.</p>
 
     </div>    
 
