--- a/legal.html
+++ b/legal.html
@@ -45,7 +45,7 @@
 
             <p>Your access to and use of the Service is conditioned on your acceptance of and compliance with these Terms. These Terms apply to all visitors, users and others who access or use the Service.</p>
 
-            <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service. The Terms and Conditions agreement  for LilyPad Dojo has been created with the help of <a href="https://www.termsfeed.com/">TermsFeed</a>.</p>
+            <p>By accessing or using the Service you agree to be bound by these Terms. If you disagree with any part of the terms then you may not access the Service.</p>
 
 
             <h2>Links To Other Web Sites</h2>
@@ -83,7 +83,9 @@
 
             <p>LilyPad Dojo assumes no responsibility for errors or omissions in the contents on the Service.</p>
 
-            <p>In no event shall LilyPad Dojo be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. LilyPad Dojo reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice. This Disclaimer  for LilyPad Dojo has been created with the help of <a href="https://www.termsfeed.com/">TermsFeed</a>.</p>
+            <p>In no event shall LilyPad Dojo be liable for any special, direct, indirect, consequential, or incidental damages or any damages whatsoever, whether in an action of contract, negligence or other tort, arising out of or in connection with the use of the Service or the contents of the Service. LilyPad Dojo reserves the right to make additions, deletions, or modification to the contents on the Service at any time without prior notice.</p>
+
+            <p>By using this website, you understand that any information and content provided herein consists of opinions of LilyPad Dojo House, LLC and professionals participating on this project, and are made available for information purposes only. No information on this website is intended to provide professional advice and we exclude all representations and warranties relating to the content and use of this website with respect to any matter requiring professional advice. In no event shall LilyPad Dojo House, LLC or its contractors be liable for any damages arising out of or in connection with the use of this website or any information provided herein.</p>
 
             <p>LilyPad Dojo does not warrant that the website is free of viruses or other harmful components.</p>
 
