--- a/contact-us.html
+++ b/contact-us.html
@@ -53,7 +53,7 @@
         <div id="contact-box">
                 
             <p>Interested in furthering the Zero-net Energy High-Performance home movement?<br/>Want to host an event at Lily Pad?<br/>
-                <button onclick="location.href='mailto:info@LilyPad.house'" type="button" id="lets-chat">Let's chat</button></p> 
+                <button onclick="location.href='mailto:noreply@lilypad.house'" type="button" id="lets-chat">Let's chat</button></p> 
             
         </div>
     </div>    
