embedded induction cooking video and art video

--- a/design.html
+++ b/design.html
@@ -35,8 +35,10 @@
     <!-- Content -->
     <div class="container sidebyside">
 
-        <img src="Placeholder/vid-coming-soon.png" class="video" />
-        <div class="row">
+        <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/watch?v=ocPCwLCmSBk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+
+<!--         <img src="Placeholder/vid-coming-soon.png" class="video" />
+ -->        <div class="row">
             <div class="column">
                 <div class="split left">
                     <img src="IMG/Design/design-philosophy.jpg">
