fix embed links

--- a/design.html
+++ b/design.html
@@ -35,7 +35,7 @@
     <!-- Content -->
     <div class="container sidebyside">
 
-        <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/watch?v=ocPCwLCmSBk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/embed/ocPCwLCmSBk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
 <!--         <img src="Placeholder/vid-coming-soon.png" class="video" />
  -->        <div class="row">
