--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -44,7 +44,7 @@
     <div class="container sidebyside">
         <div class="row">
             <div class="column">
-                <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/watch?v=fmkzE8EMEKs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe class="embedded-youtube" width="100%" src="https://www.youtube.com/embed/fmkzE8EMEKs" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 <div class="split left">
                     <img src="../IMG/Systems/Electricity/energy-meter2.jpg">
                 </div>
