remove greywater intro section

--- a/Systems/water.html
+++ b/Systems/water.html
@@ -35,7 +35,7 @@
 
     <!-- Content -->
     <div class="container sidebyside">
-        <div class="row">
+<!--         <div class="row">
             <div class="column">
                 <div class="split left">
                     <img src="../IMG/Systems/Water/greywater-pipes2.jpg">
@@ -45,11 +45,11 @@
                         <h2>Greywater Reuse</h2>
                         <p class="body-md">Stop pouring your wastewater, quite literally, down the drain. By reusing water you are not only saving money but you’re also preparing for years of drought and providing automatic irrigation. Convenient switches divert the drain to the sewer if you need to get rid of something you don't want on your plants.</p>
 
-                   <!--  <button class="float-right learn-more" onclick="location.href='greywater.html'" type="button">Learn More ></button> -->
+                    <button class="float-right learn-more" onclick="location.href='greywater.html'" type="button">Learn More ></button>
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <div class="row">
             <div class="column">
                 <div class="split right">
