--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style type="text/css">
         #vr-hero {
-            background-image: url("../IMG/living-room.jpeg");
+            background-image: url("../IMG/Home/living-room.jpeg");
             height: 500px;
         }
     
