--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">LilyPad.house</div>
+            <div id="nav-title">High-Efficiency Homes</div>
 
             <a href="index.html"><img src="IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
