--- a/experience.html
+++ b/experience.html
@@ -35,7 +35,7 @@
     <!-- Content -->
     <div class="container sidebyside">
 
-        <img src="Placeholder/vid-coming-soon.png" class="video" />
+<!--        <img src="Placeholder/vid-coming-soon.png" class="video" />-->
         <div class="row">
             <div class="column">
                 <div class="split right">
