--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
     <div class="container sidebyside">
 
-        <img src="Placeholder/vid-coming-soon.png" class="video" />
+<!--        <img src="Placeholder/vid-coming-soon.png" class="video" />-->
         
         <div class="row">
             <div class="column">
