--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
     <style type="text/css">
         #vr-hero {
-            background-image: url("../IMG/Home/living-room.jpeg");
+/*            background-image: url("../IMG/Home/living-room.jpeg");*/
             height: 500px;
         }
     
@@ -37,7 +37,7 @@
 
     <div class="hero-banner" id="vr-hero">
         
-<!--        <iframe width='100%' height='500' src='https://my.matterport.com/show/?m=hg7GKg96xbB' frameborder='0' allowfullscreen allow='vr'></iframe>-->
+        <iframe width='100%' height='500' src='https://my.matterport.com/show/?m=hg7GKg96xbB' frameborder='0' allowfullscreen allow='vr'></iframe>
     </div>
 
     <!-- Content -->
