--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
     <div class="hero-banner" id="vr-hero">
         
-        <iframe width='100%' height='500' src='https://my.matterport.com/show/?m=hg7GKg96xbB' frameborder='0' allowfullscreen allow='vr'></iframe>
+        <iframe width='100%' height='500' src='https://my.matterport.com/show/?m=hg7GKg96xbB&brand=0' frameborder='0' allowfullscreen allow='vr'></iframe>
     </div>
 
     <!-- Content -->
