--- a/Systems/water.html
+++ b/Systems/water.html
@@ -35,7 +35,7 @@
 
     <!-- Content -->
     <div class="container sidebyside">
-<!--         <div class="row">
+         <div class="row">
             <div class="column">
                 <div class="split left">
                     <img src="../IMG/Systems/Water/greywater-pipes2.jpg">
@@ -49,7 +49,7 @@
                     </div>
                 </div>
             </div>
-        </div> -->
+        </div> 
         <div class="row">
             <div class="column">
                 <div class="split right">
