--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -66,7 +66,7 @@
                         <h2>Sun Power</h2>
                         <p class="body-md">By covering your entire rooftop in solar you can have enough energy for everything in your life. This includes heating, cooling, state-of-the-art appliances, electric cars, and still have plenty of excess energy to sell back to the grid. Stop paying for electricity, heating, and gas and instead get paid.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='solar-panels.html'" type="button">Learn More ></button>
+                    <button class="float-right learn-more" onclick="location.href='solar-panels.html'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -86,7 +86,7 @@
                         <h2>Electric Car Charging</h2>
                         <p class="body-md">Solar power lets you to be your own power plant. Now you can drive electric and stop paying for gas, deal with maintenance headaches of a gas engine, or worry about the emissions or smog you’re creating around your children. It’s truly empowering to drive on free clean sunshine you’ve produced.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More ></button>
+                    <button class="float-right learn-more" onclick="location.href='ev-charging.html'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
