--- a/Systems/water.html
+++ b/Systems/water.html
@@ -45,7 +45,7 @@
                         <h2>Greywater Reuse</h2>
                         <p class="body-md">Stop pouring your wastewater, quite literally, down the drain. By reusing water you are not only saving money but you’re also preparing for years of drought and providing automatic irrigation. Convenient switches divert the drain to the sewer if you need to get rid of something you don't want on your plants.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='greywater.html'" type="button">Learn More ></button>
+                    <button class="float-right learn-more" onclick="location.href='greywater.html'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -60,7 +60,7 @@
                         <h2>Hot Water Recirculating Loops</h2>
                         <p class="body-md">Ordinarily, every time you turn on a hot faucet you have to wait for the cold water to be cleared out. This not only wastes water and time, but is uncomfortable when while you’re waiting naked in the shower. Motion-detectors automagically turn on the recircirculating loop giving you instant hot water.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='recirc-loop.html'" type="button">Learn More ></button>
+                    <button class="float-right learn-more" onclick="location.href='recirc-loop.html'" type="button">Learn More</button>
                     </div>
                 </div>   
             </div>
