--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -109,10 +109,10 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/climate.html">< Climate Control</a>
+                        <a href="../Systems/climate.html">Climate Control</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/water.html">Water ></a>
+                        <a href="../Systems/water.html">Water</a>
             </button>
         </div>
     </div>
