--- a/experience.html
+++ b/experience.html
@@ -136,10 +136,10 @@
 <div class="bottom-nav-wrapper">
     <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="design.html">< Design</a>
+                        <a href="design.html">Design</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="systems.html">Systems ></a>
+                        <a href="systems.html">Systems</a>
             </button>
     </div>
 </div>
