--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -112,10 +112,10 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/sound-air.html">< Sound &amp; Air Handling</a>
+                        <a href="../Systems/sound-air.html">Sound &amp; Air Handling</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity ></a>
+                        <a href="../Systems/electricity.html">Electricity</a>
             </button>
         </div>
     </div>
