--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -115,10 +115,10 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/water.html">< Water</a>
+                        <a href="../Systems/water.html">Water</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/climate.html">Climate Control ></a>
+                        <a href="../Systems/climate.html">Climate Control</a>
             </button>
         </div>
     </div>
