--- a/Systems/water.html
+++ b/Systems/water.html
@@ -101,10 +101,10 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/electricity.html">< Electricity</a>
+                        <a href="../Systems/electricity.html">Electricity</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/sound-air.html">Sound &amp; Air Handling ></a>
+                        <a href="../Systems/sound-air.html">Sound &amp; Air Handling</a>
             </button>
         </div>
     </div>
