--- a/design.html
+++ b/design.html
@@ -135,7 +135,7 @@
 <div class="bottom-nav-wrapper">
     <div class="container">
         <button  class="float-right bottom-nav">
-                    <a href="experience.html">Experience ></a>
+                    <a href="experience.html">Experience</a>
         </button>
     </div>
 </div>
