--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                         <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era tract house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
                         <button  class="float-right learn-more">
-                            <a href="design.html">Learn More ></a>
+                            <a href="design.html">Learn More</a>
                         </button>
                     </div>
                 </div>                
@@ -106,7 +106,7 @@
                         <h2>Great Experience</h2>
                         <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, your home should help your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
                         <button  class="float-right learn-more">
-                            <a href="experience.html">Learn More ></a>
+                            <a href="experience.html">Learn More</a>
                         </button>
                     </div>
                 </div>
