--- a/systems.html
+++ b/systems.html
@@ -121,15 +121,13 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="experience.html">< Experience</a>
+                        <a href="experience.html">Experience</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="resources.html">Resources ></a>
+                        <a href="resources.html">Resources</a>
             </button>
         </div>
     </div>
-</div>
-
 
 <div id="footer"></div>
 
