--- a/Systems/electricity.html
+++ b/Systems/electricity.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Electricity</title>
+    <title>100% Electric</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../CSS/global.css" media="screen">
 
@@ -30,7 +30,7 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">Electricity</div>
+            <div id="nav-title">100% Electric</div>
 
             <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
@@ -112,7 +112,7 @@
                         <a href="../Systems/climate.html">Climate Control</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/water.html">Water</a>
+                        <a href="../Systems/water.html">Water Management</a>
             </button>
         </div>
     </div>
