--- a/design.html
+++ b/design.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Design</title>
+    <title>Smart Design</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
 
@@ -24,7 +24,7 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">Design</div>
+            <div id="nav-title">Smart Design</div>
 
             <a href="index.html"><img src="IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
@@ -135,7 +135,7 @@
 <div class="bottom-nav-wrapper">
     <div class="container">
         <button  class="float-right bottom-nav">
-                    <a href="experience.html">Experience</a>
+                    <a href="experience.html">A Great Experience</a>
         </button>
     </div>
 </div>
