--- a/experience.html
+++ b/experience.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Experience</title>
+    <title>A Great Experience</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
 
@@ -24,7 +24,7 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">Experience</div>
+            <div id="nav-title">A Great Experience</div>
 
             <a href="index.html"><img src="IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
@@ -136,10 +136,10 @@
 <div class="bottom-nav-wrapper">
     <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="design.html">Design</a>
+                        <a href="design.html">Smart Design</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="systems.html">Systems</a>
+                        <a href="systems.html">High-Performance Systems</a>
             </button>
     </div>
 </div>
