--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -115,7 +115,7 @@
                         <a href="../Systems/sound-air.html">Sound &amp; Air Handling</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity</a>
+                        <a href="../Systems/electricity.html">100% Electric</a>
             </button>
         </div>
     </div>
