--- a/resources.html
+++ b/resources.html
@@ -255,10 +255,10 @@
     <div class="bottom-nav-wrapper">
             <div class="container">
                 <button  class="float-left bottom-nav">
-                            <a href="systems.html">< Systems</a>
+                            <a href="systems.html">Systems</a>
                 </button>
                 <button  class="float-right bottom-nav">
-                            <a href="contact-us.html">Contact Us ></a>
+                            <a href="contact-us.html">Contact Us</a>
                 </button>
             </div>
         </div>
