--- a/Systems/water.html
+++ b/Systems/water.html
@@ -101,7 +101,7 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="../Systems/electricity.html">Electricity</a>
+                        <a href="../Systems/electricity.html">100% Electric</a>
             </button>
             <button  class="float-right bottom-nav">
                         <a href="../Systems/sound-air.html">Sound &amp; Air Handling</a>
