--- a/contact-us.html
+++ b/contact-us.html
@@ -60,7 +60,7 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="resources.html">< Resources</a>
+                        <a href="resources.html">Resources</a>
             </button>
         </div>
     </div>
