--- a/resources.html
+++ b/resources.html
@@ -255,7 +255,7 @@
     <div class="bottom-nav-wrapper">
             <div class="container">
                 <button  class="float-left bottom-nav">
-                            <a href="systems.html">Systems</a>
+                            <a href="systems.html">High-Performance Systems</a>
                 </button>
                 <button  class="float-right bottom-nav">
                             <a href="contact-us.html">Contact Us</a>
