--- a/Systems/water.html
+++ b/Systems/water.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Water</title>
+    <title>Water Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="../CSS/global.css" media="screen">
 
@@ -23,7 +23,7 @@
             <!-- Nav Menu Button -->
             <button class="menu-btn">&#9776;</button>
             
-            <div id="nav-title">Water</div>
+            <div id="nav-title">Water Management</div>
 
             <a href="../index.html"><img src="../IMG/nav-logo.png" id="nav-logo" /></a>
         </div>
