--- a/systems.html
+++ b/systems.html
@@ -3,7 +3,7 @@
 <head profile="http://www.w3.org/2005/10/profile">
     <link rel="icon" type="image/png" href="IMG/favicon.png">
     <meta charset="UTF-8">
-    <title>Systems</title>
+    <title>High-Performance Systems</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="CSS/global.css" media="screen">
 
@@ -73,14 +73,14 @@
         </p>
         <div class="image-text-wrapper">
             <a href="Systems/electricity.html"><img src="IMG/Systems/solar-system.jpg" /></a>
-            <div class="image-text-overlay">Electricity</div>
+            <div class="image-text-overlay">100% Electric</div>
         </div>
         <div class="row">
             <div class="column">
                 <div class="split left">
                     <div class="image-text-wrapper">
                         <a href="Systems/water.html"><img src="IMG/Systems/water-system.jpg"></a>
-                        <div class="image-text-overlay">Water</div>
+                        <div class="image-text-overlay">Water Management</div>
                     </div>
                 </div>
                 <div class="split right">
@@ -121,10 +121,10 @@
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
-                        <a href="experience.html">Experience</a>
+                        <a href="experience.html">A Great Experience</a>
             </button>
             <button  class="float-right bottom-nav">
-                        <a href="resources.html">Resources</a>
+                        <a href="resources.html">Helpful Resources</a>
             </button>
         </div>
     </div>
