--- a/contact-us.html
+++ b/contact-us.html
@@ -22,6 +22,7 @@
             max-width: 400px;
             text-align: center;
             margin: 0 auto;
+            background: #808080bd;
         }
 
         #contact-box p {
@@ -52,7 +53,6 @@
         </div>
     </nav>
 
-    <div class="container" id="contact-bg">
         <div class="hero-banner" id="contactHero">
 
             <!-- Content -->
@@ -63,7 +63,6 @@
 
             </div>
         </div>
-    </div>    
     <div class="bottom-nav-wrapper">
         <div class="container">
             <button  class="float-left bottom-nav">
