--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="row">
             <div class="column">
                 <div class="split right">
-                     <img src="IMG/Home/innovative-design.jpg">
+                     <img src="IMG/Home/windows.jpg">
                 </div>
                 <div class="split left">
                     <div class="copy-block">
@@ -98,7 +98,7 @@
         <div class="row">
             <div class="column">
                 <div class="split left">
-                    <img src="IMG/Home/friends-bbq.jpg">
+                    <img src="IMG/Home/woman-reading.jpg">
                 </div>
 
                 <div class="split right">
