contact us box top padding

--- a/contact-us.html
+++ b/contact-us.html
@@ -22,12 +22,14 @@
             max-width: 400px;
             text-align: center;
             margin: 0 auto;
-            background: #808080bd;
+            padding-top:100px;
+            
         }
 
         #contact-box p {
             margin:0;
             color:white;
+            background: #808080bd;
         }
 
         #contact-bg {
