--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                         <h2>Innovative Design</h2>
                         <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era tract house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
-                        <button  class="float-right learn-more">
+                        <button class="learn-more">
                             <a href="design.html">Learn More</a>
                         </button>
                     </div>
@@ -110,7 +110,7 @@
                     <div class="copy-block">
                         <h2>Great Experience</h2>
                         <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, your home should help your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
-                        <button  class="float-right learn-more">
+                        <button  class="learn-more">
                             <a href="experience.html">Learn More</a>
                         </button>
                     </div>
@@ -121,6 +121,10 @@
     
     <div id="systems-hero">
         <h3>Explore How High-Performance Systems Can Work For You</h3>
+        <p>LilyPad goes further than net-zero energy, it's net-positive. With a massive 13kW solar array, it produces 3x more energy than it consumes. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.</p>
+        <button  class="learn-more">
+            <a href="systems.html">Learn More</a>
+        </button>
     </div>
 
 
