fix float right

--- a/Systems/climate.html
+++ b/Systems/climate.html
@@ -45,7 +45,7 @@
                         <h2>External Insulation</h2>
                         <p class="body-md">The insulation (R-value) of your home determines how much temperature you lose to the outside. A common approach uses thicker studs that allow for more insulation. However, the studs themselves remain uninsulated. External insulation greatly increases your home insulation and also protects against other maladies.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='climate-management.html#outsulation'" type="button">Learn More</button>
+                    <button class="learn-more" onclick="location.href='climate-management.html#outsulation'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
