--- a/Systems/sound-air.html
+++ b/Systems/sound-air.html
@@ -46,7 +46,7 @@
                         <h2>Heat Recovery Ventilation</h2>
                         <p class="body-md">A Heat Recovery Ventilation device acts a hub for your ventilation system and recovers heat that is being exhausted to the outdoors. Paired with a high-efficiency heating and cooling system, an HRV dramatically reduces energy needs to heat or cool your home while keeping your air fresh, filtered, and oxygenated.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='climate-management.html#hrv'" type="button">Learn More</button>
+                    <button class="learn-more" onclick="location.href='climate-management.html#hrv'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -61,7 +61,7 @@
                         <h2>Air Sealing</h2>
                         <p class="body-md">As your home increases in efficiency and your total insulation improves, it also becomes important to seal the building well to prevent additional heat loss. A blower door test can identify leakages and improve air sealing. The better your home is sealed, the more you can control both temperature and ventilation.</p>
 
-                    <button class="float-right learn-more" onclick="location.href='climate-management.html#air-sealing'" type="button">Learn More</button>
+                    <button class="learn-more" onclick="location.href='climate-management.html#air-sealing'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
