--- a/index.html
+++ b/index.html
@@ -22,7 +22,13 @@
         #systems-content {
             width: 800px;
             margin: 0 auto;
-            padding-top: 100px;
+            padding-top: 30px;
+            color: white;
+            background: #808080b8;
+        }
+        
+        #systems-content h3 {
+            color: white;
         }
         
         #moreSystems {
