--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
             margin: 0 auto;
             padding-top: 30px;
             color: white;
-            background: #808080b8;
+            background: #3c3c3ce8;
+            position: relative;
+            top:30%;
         }
         
         #systems-content h3 {
@@ -136,7 +138,7 @@
         <div id="systems-content">
             <h3>Explore How High-Performance Systems Can Work For You</h3>
             <p>LilyPad goes further than net-zero energy, it's net-positive. With a massive 13kW solar array, it produces 3x more energy than it consumes. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.</p>
-            <button  class="learn-more">
+            <button id="moreSystems" class="learn-more">
                 <a href="systems.html">Learn More</a>
             </button>
         </div>
