--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
     
     <div id="systems-hero">
         <div id="systems-content">
-            <h1>Explore How High-Performance Systems</h1>
+            <h1>Explore High-Performance Systems</h1>
             <p>LilyPad goes further than net-zero energy, it's net-positive. With a massive 13kW solar array, it produces 3x more energy than it consumes. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.</p>
             <button id="moreSystems" class="learn-more">
                 <a href="systems.html">Learn More</a>
