--- a/index.html
+++ b/index.html
@@ -139,9 +139,7 @@
                     <div class="copy-block">
                         <h2>Great Experience</h2>
                         <p class="body-md">Whether you’re barbecuing with friends, running kids to a soccer game, or coming home late after a long work day, your home should help your busy lifestyle while providing a quiet, clean, comfortable and healthy sanctuary.</p>
-                        <button  class="learn-more">
-                            <a href="experience.html">Learn More</a>
-                        </button>
+                        <button class="learn-more" onclick="location.href='experience.html'" type="button">Learn More</button>
                     </div>
                 </div>
             </div>
@@ -152,9 +150,7 @@
         <div id="systems-content">
             <h1>Explore High-Performance Systems</h1>
             <p>LilyPad goes further than net-zero energy, it's net-positive. With a massive 13kW solar array, it produces 3x more energy than it consumes. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.</p>
-            <button id="moreSystems" class="learn-more">
-                <a href="systems.html">Learn More</a>
-            </button>
+            <button class="learn-more" onclick="location.href='systems.html'" type="button">Learn More</button>
         </div>
     </div>
     
