are we there yet?

--- a/index.html
+++ b/index.html
@@ -122,9 +122,7 @@
                         <h2>Innovative Design</h2>
                         <p class="body-md">LilyPad’s design marries the latest in technology and high performance with 21st century architecture that pays homage to its 1950’s-era tract house roots. It’s community-centered design fosters relationships and creates a healthy, joyful life.</p>
 
-                        <button class="learn-more">
-                            <a href="design.html">Learn More</a>
-                        </button>
+                        <button class="learn-more" onclick="location.href='design.html'" type="button">Learn More</button>
                     </div>
                 </div>                
             </div>
@@ -150,7 +148,9 @@
         <div id="systems-content">
             <h1>Explore High-Performance Systems</h1>
             <p>LilyPad goes further than net-zero energy, it's net-positive. With a massive 13kW solar array, it produces 3x more energy than it consumes. By recycling water through the greywater system, it significantly cuts its water need. Additionally, air-sealing and super-insulated walls create best-in-class efficiency and a great home experience. Let's build high-performance homes that work for us, rather than us working to maintain our homes.</p>
-            <button class="learn-more" onclick="location.href='systems.html'" type="button">Learn More</button>
+            <button id="moreSystems" class="learn-more">
+                <a href="systems.html">Learn More</a>
+            </button>
         </div>
     </div>
     
