--- a/Systems/greywater.html
+++ b/Systems/greywater.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us">
 <head profile="http://www.w3.org/2005/10/profile">
-    <link rel="icon" type="image/png" href="IMG/favicon.png">
+    <link rel="icon" type="image/png" href="../IMG/favicon.png">
     <meta charset="UTF-8">
     <title>Greywater Reuse</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
