--- a/index.html
+++ b/index.html
@@ -63,8 +63,15 @@
 
     <nav class="nav-fixed">
         <div class="nav-wrapper">
-            <!-- Nav Menu Button -->
-            <button class="menu-btn">&#9776;</button>
+            <!-- Nav Menu Button &#9776;-->
+            <button class="menu-btn">
+                <div class="wrapper">
+              <div class="navbar">
+                <div class="first"></div>
+                <div class="second"></div>
+                <div class="third"></div>
+              </div>
+                </div></button>
             
             <div id="nav-title">High-Performance Homes</div>
 
