--- a/index.html
+++ b/index.html
@@ -64,13 +64,15 @@
     <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button &#9776;-->
-            <div class="wrapper">
+            <button class="menu-btn">
+                <div class="wrapper">
               <div class="navbar">
                 <div class="first"></div>
                 <div class="second"></div>
                 <div class="third"></div>
               </div>
-            </div>
+                </div>
+            </button>
             
             <div id="nav-title">High-Performance Homes</div>
 
