--- a/index.html
+++ b/index.html
@@ -64,15 +64,13 @@
     <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button &#9776;-->
-            <button class="menu-btn">
-                <div class="wrapper">
+            <div class="wrapper menu-btn">
               <div class="navbar">
                 <div class="first"></div>
                 <div class="second"></div>
                 <div class="third"></div>
               </div>
-                </div>
-            </button>
+            </div>
             
             <div id="nav-title">High-Performance Homes</div>
 
