--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="nav-wrapper">
             <!-- Nav Menu Button &#9776;-->
             <div class="wrapper menu-btn">
-              <div class="navbar">
+              <div class="hamburger navbar">
                 <div class="first"></div>
                 <div class="second"></div>
                 <div class="third"></div>
