--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
     <nav class="nav-fixed">
         <div class="nav-wrapper">
             <!-- Nav Menu Button &#9776;-->
-            <div class="wrapper menu-btn">
-              <div class="hamburger navbar">
+            <div class="menu-btn">
+              <div class="navbar">
                 <div class="first"></div>
                 <div class="second"></div>
                 <div class="third"></div>
